src/ui/snapshots/thermal_160x45.snap
---
source: src/ui/layout.rs
---
 ◉ mxmon cpu  0.4% │ Apple M3 Max  4E+12P · 40-core GPU · 48G                                               macOS 26.5  load 3.42 2.87 2.51  up 1d 2h  HH:MM:SS
╭╸CHASSIS HEAT MAP╺────────────────────────────────────────────────────────────────────────────────────────────────╮╭╸SENSORS╺─────────────────────────────────╮
│                                                                                                                  ││─ E-Cores                                 │
│                                                                                                                  ││ E-Core 0                           56.0° │
│ ╭─────────────────────────────────────━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━─────────────────────────────────────╮ ││ E-Core 1                           54.0° │
│ │                                                                                                              │ ││ E-Core 2                           56.0° │
│ │      2190rpm   ═════════════════════════════╭─────────────────╮═════════════════════════════   2248rpm       │ ││ E-Core 3                           60.0° │
│ │        ⣀⣀⣀⡀           ╭────────╭┈┈┈╭────────╯┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈╰─╮┈┈┈┈┈┈┈┈┈┈╮──────╮             ⢀⣀⣀⣀         │ ││─ P-Cores                                 │
│ │     ⡠⠖⠉   ⠈⠑⠢⡀        │╭──────╮╭╭ E-CPU ┬───────┬───────┬───────╮╮╭ ANE ──╮┊╭────╮│          ⢀⠔⠊⠁   ⠉⠲⢄      │ ││ P-Core 0                           62.0° │
│ │ ╭───────────╮⠙⡆       ││      │││E1  56°│E2  54°│E3  56°│E4  60°│╰│ANE 45°│┊│    ││         ⢰⠋  •     ⠈⢧     │ ││ P-Core 1                           60.0° │
│ │ │  ⡇AIR L 38° ⡇       ││      ╭╯╰───────┴───────┴───────┴───────╯ ╰───────╯────╮ ││         ⢸         •⢸     │ ││ P-Core 2                           62.0° │
│ │ ╰───────────╯⣠PMU2 49°││    ╭─╯┊                                           ┊│  ╰───╮        ⠘⣄        ⢀⡎     │ ││ P-Core 3                           66.0° │
│ │     ⠉⠢⢄•⣀⣀⣀⠤⠚⠁        ││   ╭╯ │┊      ╭ P-CPU ──┬────┬────┬────┬────╮      ┊│    ││╰╮        ⠈⠓⠤•⣀⣀⣀⡠⠔⠉      │ ││ P-Core 4                           66.0° │
│ │                       ││  ╭╯  │┊      │ 62°│ 60°│ 62°│ 66°│ 66°│ 59°│      ┊│    ││╭╯                        │ ││ P-Core 5                           59.0° │
│ ├────────╮              │╰─╭╯───╯┊      │ 61°│ 65°│ 65°│ 63°│ 60°│ 64°│      ┊╰────╯╭╯       ╭───────╮         │ ││ P-Core 6                           61.0° │
│ │ CHG 40°│              │╭─╰╮───╮┊      ╰────┴────┴────┴────┴────┴────╯      ┊╭────╭╯        │ ╭───────╮       │ ││ P-Core 7                           65.0° │
│ ├────────╯              ││  ╰╮  │┊           ╭ GPU ────┬────┬────╮           ┊│   ╭╯│        │SSD 40°│ │       │ ││ P-Core 8                           65.0° │
│ │                       ││   ╰─╮│┊           │ 56°│ 58°│ 62°│ 62°│           ┊│ ╭─╯││        ╰─╰───────╯       │ ││ P-Core 9                           63.0° │
│ │                       ││     ╰───╮         ╰────┴────┴────┴────╯           ╭──╯  ││                          │ ││ P-Core 10                          60.0° │
│ │                       ││      │┊ ╰─────╭ DIE ───┬────55°─┬────────╮────────╯│    ││                          │ ││ P-Core 11                          64.0° │
│ │                       │╰──────╯┊       │D1   53°│D2   51°│D3   53°│        ┊╰────╯│                          │ ││─ GPU                                     │
│ │                       │        ┊       │D4   57°│D5   53°│D6   51°│        ┊      │                          │ ││ GPU Cluster 1                      56.0° │
│ │                       │        ┊       ╰────────┴────────┴────────╯        ┊      │                          │ ││ GPU Cluster 2                      58.0° │
│ │                       │        ╰┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈╯      │                          │ ││ GPU Cluster 3                      62.0° │
│ │                       │             APPLE M3 MAX · 40-CORE GPU · 48GB             │                          │ ││ GPU Cluster 4                      62.0° │
│ │                       ╰───────────────────────────────────────────────────────────╯                          │ ││─ SoC                                     │
│ │                                                                                                              │ ││ Die 0                              53.0° │
│ │                       ╭────────────────╮╭─────╭──────────────╮────╮╭────────────────╮                        │ ││ Die 1                              51.0° │
│ ├╮          ⣿⣿⣿⣿        │               ╭───────╯     │ │      ╰────────╮             │        ⣿⣿⣿⣿          ╭─┤ ││ Die 2                              53.0° │
│ │╰───────╮  ⣿⣿⣿⣿        │░░░░░░░╭───────╯││     BATT · 78% 33°      ││░░╰───────╮░░░░░│        ⣿⣿⣿⣿╭─────────╯ │ ││ Die 3                              57.0° │
│ │        ╰─────────45°──────────╯░░░░░░░░││░░░░░░░░░░░│ │░░░░░░░░░░░││░░░░░░░░░░╰──────────────────╯           │ ││ Die 4                              53.0° │
│ │           ⣿⣿⣿⣿        ╰────────────────╯│░░░░░░░░░░░│ │░░░░░░░░░░░│╰────────────────╯        ⣿⣿⣿⣿            │ ││ Die 5                              51.0° │
│ │           ⣿⣿⣿⣿        ╭────────────────╮│░░░░░░░░░░░│ │░░░░░░░░░░░│╭────────────────╮        ⣿⣿⣿⣿            │ ││ PMU 2                              49.0° │
│ │           ⣿⣿⣿⣿        │                │╭░░░░░░░░░░░───░░░░░░░░░░░╮│                │        ⣿⣿⣿⣿            │ ││─ ANE                                     │
│ │           ⣿⣿⣿⣿        │░░░░░░░░░░░░░░░░││░░░░░░░░░░░│ │░░░░░░░░░░░││░░░░░░░░░░░░░░░░│        ⣿⣿⣿⣿            │ ││ ANE 0                              45.0° │
│ │           ⣿⣿⣿⣿        │░░░░░░░░░░░░░░░░││░░░░╭──────35°───────╮░░░││░░░░░░░░░░░░░░░░│        ⣿⣿⣿⣿            │ ││─ SSD                                     │
│ │           ⣿⣿⣿⣿        ╰────────────────╯│──╭─╯───TPAD 29°─────╰─╮─│╰────────────────╯        ⣿⣿⣿⣿            │ ││ NAND                               39.5° │
│ │                                         │  │                    │ │                                          │ ││─ Battery                                 │
│ │                                         ╰──╰─╮────────────────╭─╯─╯                                          │ ││ Battery                            33.2° │
│ │                                              ╰────────────────╯                                              │ ││─ Airflow                                 │
│ ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────╯ ││ Airflow L                          38.0° │
│                                                                                                                  ││─ Power                                   │
│                                                                                                                  ││ Charger                      scroll ↑↓4° │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯╰──────────────────────────────────────────╯
  1 overview   2 processes   3 thermal   4 net   ? help  / filter  x kill  p pause  o settings  t theme  q quit                              sudo for all procs
