src/ui/snapshots/thermal_80x24.snap
---
source: src/ui/layout.rs
---
 ◉ mxmon cpu  0.4% │ Apple M3 Max                                      HH:MM:SS
╭╸CHASSIS HEAT MAP╺ 67°C max ────────────────────────╮╭╸SENSORS╺───────────────╮
│                                                    ││─ E-Cores               │
│ ╭────────────────━━━━━━━━━━━━━━━━────────────────╮ ││ E-Core 0         56.0° │
│ │ 2190rpm         ╭────────╮            1822rpm  │ ││ E-Core 1         58.0° │
│ ├──────╮        ╭─╯        ╰─╮                   │ ││ E-Core 2         56.0° │
│ │     ╭╯      ╭─╯            ╰───55°───╮         │ ││ E-Core 3         56.0° │
│ │  ╭──╯      ╭╯      CPU 63°          ╭╯         │ ││─ P-Cores               │
│ ├╮ │         │                      ╭─╯SSD 44°   │ ││ P-Core 0         62.0° │
│ │╰─╯         ╰╮                   ╭─╯            │ ││ P-Core 1         64.0° │
│ │             ╰────╮ GPU 59°╭─────╯              │ ││ P-Core 2         62.0° │
│ │                  ╰────────╯                    │ ││ P-Core 3         62.0° │
│ │                                                │ ││ P-Core 4         66.0° │
│ ├─╮              ╭──────45°──────╮             ╭─┤ ││ P-Core 5         63.0° │
│ │ ╰──────────────╯               ╰─────────────╯ │ ││ P-Core 6         61.0° │
│ │                BATT · 78% 33°                  │ ││ P-Core 7         61.0° │
│ │                                                │ ││ P-Core 8         65.0° │
│ │                     ╭────╮                     │ ││ P-Core 9         67.0° │
│ │                     ╰────╯                     │ ││ P-Core 10        60.0° │
│ ╰────────────────────────────────────────────────╯ ││ P-Core 11        60.0° │
│                                                    ││─ GPU                   │
│                                                    ││ GPU Clusterscroll ↑↓0° │
╰────────────────────────────────────────────────────╯╰────────────────────────╯
  1 overview   2 processes   3 thermal   4 net   ? help  / filter  x kill
